# mini_hist

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
hist/: __init__.py  core.py
notebooks/: Untitled.ipynb
src/hist/_internal/: axis.py
tests/: test_named.py
