[build-system]
requires = [
    "flit_core >=2,<3",
    "boost-histogram ==0.6.2"
]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "hist"
author = "Henry Schreiner"
author-email = "henryfs@princeton.edu"
home-page = "https://iscinumpy.gitlab.io"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only"
]

