[metadata]
name = mini-hist
author = Henry Schreiner
author_email = henry.schreiner@cern.ch
maintainer = The Scikit-HEP admins
maintainer_email = scikit-hep-admins@googlegroups.com
version = attr: hist.__version__
description = Hist classes and utilities
long_description = file: README.md
long_description_content_type = md
url = https://github.com/scikit-hep/hist
license = BSD 3-Clause License
keywords =
  histogram
  boost-histogram
platforms =
  Any
classifiers =
  Topic :: Scientific/Engineering
  Intended Audience :: Science/Research
  Intended Audience :: Developers
  Operating System :: OS Independent
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  rogramming Language :: Python :: 3
  rogramming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Development Status :: 1 - Planning",


[options]
python_requires = >=3.6
packages = find:
package_dir =
  =src
install_requires =
  numpy >=1.13.3
  boost-histogram ==0.6.2

[options.extras_require]
dev =
  pytest >=5.0
  matplotlib >= 3.0
test =
  pytest >=5.0
mpl =
  matplotlib >= 3.0

[options.packages.find]
where = src
